<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/background_pantalla_principal">

    <TextView android:id="@+id/lblElegirIngenieria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/elegirIngenieria"
        android:textColor="@android:color/white" />


    <Button android:id="@+id/btnComputacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/lblElegirIngenieria"
        android:layout_centerHorizontal="true"
        android:text="@string/computacion"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sonido"
        android:id="@+id/btnSonido"
        android:layout_below="@+id/btnComputacion"
        android:layout_alignLeft="@+id/btnComputacion"
        android:layout_alignStart="@+id/btnComputacion"
        android:layout_alignRight="@+id/btnComputacion"
        android:layout_alignEnd="@+id/btnComputacion" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Salir"
        android:id="@+id/btnSalir"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/btnSonido"
        android:layout_toRightOf="@id/btnSonido"/>

</RelativeLayout>
